--- a/golang/1.9/Dockerfile
+++ b/golang/1.9/Dockerfile
@@ -9,11 +9,13 @@ RUN curl -o /tmp/docker-${DOCKER_VERSION}.tgz https://download.docker.com/linux/
     mv /tmp/docker/* /usr/local/bin && \
     rm -f /tmp/docker-${DOCKER_VERSION}.tgz && \
     apt-get update && \
-    apt-get install unzip postgresql-client netcat -y --no-install-recommends && \
+    apt-get install unzip postgresql-client netcat make python python-pip python-setuptools -y --no-install-recommends && \
     rm -rf /var/lib/apt/lists/* && \
     curl -Lo /tmp/protoc.zip https://github.com/google/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip && \
     unzip -d /usr/local /tmp/protoc.zip && \
     rm -f /tmp/protoc.zip && \
+    pip install wheel && \
+    pip install awscli && \
     go get -v github.com/golang/protobuf/proto && \
     go get -v github.com/golang/protobuf/protoc-gen-go && \
     go get -v github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway && \
