Remove go, dep and proto

--- a/jdk/10/Dockerfile
+++ b/jdk/10/Dockerfile
@@ -1,20 +1,13 @@
 FROM openjdk:10
 
 ARG MAVEN_VERSION=3.5.3
-ARG GO_VERSION=1.10.3
 ARG DOCKER_VERSION=17.12.0-ce
-ARG PROTOC_VERSION=3.3.0
-ARG DEP_VERSION=v0.4.1
 ARG SONAR_SCANNER_VERSION=3.2.0.1227
 
 RUN mkdir /usr/local/maven \
         && curl -sSL https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
         | tar -xzC /usr/local/maven --strip-components 1 \
-        && curl -sSL https://dl.google.com/go/go${GO_VERSION}.linux-amd64.tar.gz | tar -xzC /usr/local \
         && curl -sSL https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz | tar -xzC /usr/local/bin --strip-components 1 \
-        && curl -sSL https://github.com/google/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip -o /tmp/protoc.zip \
-        && unzip -d /usr/local /tmp/protoc.zip \
-        && rm -f /tmp/protoc.zip \
         && apt-get update \
         && apt-get install make python python-pip python-setuptools -y --no-install-recommends \
         && rm -rf /var/lib/apt/lists/* \
@@ -23,14 +16,7 @@ RUN mkdir /usr/local/maven \
         && curl -sSL https://sonarsource.bintray.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${SONAR_SCANNER_VERSION}-linux.zip -o /tmp/sonar.zip \
         && unzip -d /opt tmp/sonar.zip \
         && rm /tmp/sonar.zip \
-        && curl -sSLo /usr/local/bin/dep https://github.com/golang/dep/releases/download/${DEP_VERSION}/dep-linux-amd64 \
-        && chmod +x /usr/local/bin/dep \
         && mkdir /code
 
 ENV MAVEN_HOME /usr/local/maven
-ENV PATH "$PATH:/usr/local/maven/bin:/usr/local/go/bin:/code/bin:/opt/sonar-scanner-${SONAR_SCANNER_VERSION}-linux/bin"
-ENV GOPATH "/code"
-
-RUN go get -v github.com/golang/protobuf/proto \
-        && go get -v github.com/golang/protobuf/protoc-gen-go \
-        && go get -v github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway
+ENV PATH "$PATH:/usr/local/maven/bin:/code/bin:/opt/sonar-scanner-${SONAR_SCANNER_VERSION}-linux/bin"
