Set _JAVA_OPTIONS to fix broken openjdk 8

--- a/jdk/8/Dockerfile
+++ b/jdk/8/Dockerfile
@@ -4,3 +4,4 @@ RUN sudo apt-get install python python-pip python-setuptools postgresql-client -
         && sudo pip install wheel \
         && sudo pip install awscli
 
+ENV _JAVA_OPTIONS=-Djdk.net.URLClassPath.disableClassPathURLCheck=true
