--- a/golang/1.13/Dockerfile
+++ b/golang/1.13/Dockerfile
@@ -2,7 +2,7 @@ FROM circleci/golang:1.13
 
 RUN set -ex && \
     sudo apt-get update && \
-    sudo apt-get install postgresql-client netcat make python python-pip python-setuptools -y --no-install-recommends && \
+    sudo apt-get install postgresql-client netcat make python python-pip python-setuptools librdkafka-dev -y --no-install-recommends && \
     pip install wheel && \
     pip install awscli
 
